	* test/gemutilities.rb: Fix binary file reads being truncated on Windows.
	* test/test_gem_commands_install_command.rb: Switch to read_binary.
	* test/test_gem_commands_update_command.rb: Ditto.
	* test/test_gem_commands_server_command.rb: Consider full path when
	evaluating location (instead of hardcoded or missing drive leter).
	* test/test_gem_installer.rb: Ditto.

2008-03-26  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems.rb: Handle backslashes that came from GEM_HOME and 
	GEM_PATH on Windows.

2008-03-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_index.rb:  Add updating from latest index,
	default to updating from latest index.  Reduces common-case update
	to under 3,000 gems at present.
	* lib/rubygems/remote_fetcher:  Fix error reporting from net/http.
	* lib/rubygems.rb:  Sort methods, remove last vestiges of autorequire,
	RDoc cleanup.

2008-03-23  Luis Lavena  <luislavena@gmail.com>

	* setup.rb: generated Windows stubs will honors prefix using Gem.ruby
	instead of hardcoded 'ruby.exe'
	* lib/rubygems/installer.rb: generated Windows stubs scripts will now
	work from differnt directories than Gem::bindir. Fixes bug #16259 by
	Claus Folke Brobak

2008-03-20  Eric Hodel  <drbrain@segment7.net>

	* test/test_gem_source_info_cache.rb:  Test with real objects now.
	* lib/rubygems/source_index.rb:  #latest_specs now has latest specs
	for all platforms.
	* lib/rubygems/source_info_cache.rb:  Add latest cache data, only load
	full cache data when needed.

2008-03-20  Luis Lavena  <luislavena@gmail.com>

	* test/gemutilities.rb:  Change all the file processing mechanism to
	enable binary mode by default (required for Windows file operations
	dealing with non-printable characters).

2008-03-19  Luis Lavena  <luislavena@gmail.com>

	* lib/rubygems/package/tar_output.rb: Adapted code to use #wrap instead 
	of #new when dealing with Zlib::GzipWriter (fixes SEGV and warnings due
	GzipWriter object not being closed explicitly).
