@@ -393,15 +393,16 @@ class TestGemDependencyInstaller < RubyGemTestCase
     end
   end
 
-  def test_install_no_wrappers
-    data = File.open(@a1_gem, 'rb') { |f| f.read }
-    @fetcher.data['http://gems.example.com/gems/a-1.gem'] = data
+  unless win_platform? then
+    def test_install_no_wrappers
+      @fetcher.data['http://gems.example.com/gems/a-1.gem'] = read_binary(@a1_gem)
 
-    inst = Gem::DependencyInstaller.new :wrappers => false
-    inst.install 'a'
+      inst = Gem::DependencyInstaller.new :wrappers => false
+      inst.install 'a'
 
-    assert_no_match(%r|This file was generated by RubyGems.|,
-                    File.read(File.join(@gemhome, 'bin', 'a_bin')))
+      assert_no_match(%r|This file was generated by RubyGems.|,
+                      File.read(File.join(@gemhome, 'bin', 'a_bin')))
+    end
   end
 
   def test_install_version
